# xf86-video-freedreno

./: Makefile.am  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
.github/scripts/: install-prereq.sh
.github/workflows/: build.yml
conf/: Makefile.am
man/: Makefile.am
src/: Makefile.am  compat-api.h  drmmode_display.c  fbmode_display.c  msm-accel-z1xx.c  msm-accel.c  msm-dri2.c  msm-driver.c  msm-exa-xa.c  msm-exa.c  msm-pixmap.c  msm.h
